ATUALIIZA README E HTML.

--- a/formCadastro.html
+++ b/formCadastro.html
@@ -40,7 +40,7 @@
             <br>
             <input type="endereço" class="form-control" id="endereco" placeholder="ex:rua: joão Ruiz..." >
             <br>
-            <label for="number" class="form-label">Número</label> 
+            <label for="number" class="form-label">Número</label> <br>
             <br>
             <input type="number" class="form-control" id="number" placeholder="ex:231"  required=""  >
             <br>
