faz alterações e coloca gif

--- a/formCadastro.html
+++ b/formCadastro.html
@@ -30,15 +30,19 @@
             <br>
             <label for="cpf" class="form-label">CPF</label> 
             <br>
-            <input type="text" class="form-control" id="ao_cpf" placeholder="ex:000.000.000-00"  maxlength="14">
+            <input type="text" class="form-control" id="cpf" placeholder="ex:000.000.000-00"  maxlength="14">
             <br>
             <label for="cep" class="form-label">CEP</label> 
             <br>
-            <input type="number" class="form-control" id="ao_cep" placeholder=""  >
+            <input type="number" class="form-control" id="cep" placeholder=""  >
             <br>
             <label for="text" class="form-label">Endereço</label> 
             <br>
-            <input type="endereço" class="form-control" id="endereco" placeholder="ex:rua: joão Ruiz..." >
+            <input type="endereço" class="form-control" id="rua" placeholder="ex:rua..." >
+            <br>
+            <label for="text" class="form-label">Bairro</label> 
+            <br>
+            <input type="endereço" class="form-control" id="bairro" placeholder="ex:Insira seu bairro" >
             <br>
             <label for="number" class="form-label">Número</label> <br>
             <br>
@@ -50,11 +54,11 @@
             <br>
             <label for="cidade">Cidade</label>
             <br>
-            <input type="text" id="cid" placeholder="ex:LONDRINA" style="width: 90px;" required=""  />
+            <input type="text" id="cidade" placeholder="ex:LONDRINA" style="width: 90px;" required=""  />
             <br>
             <label for="estado">Estado</label>
             <br>
-            <input type="text" id="est" placeholder="ex:PR" style="width: 50px;" required="" >
+            <input type="text" id="estado" placeholder="ex:PR" style="width: 50px;" required="" >
             <br>
             <label for="bairro">Bairro</label>
             <br>
